2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/NodeStore.xml : documented

2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/TreeNode.xml : documented
	* en/Gtk/TreeView.xml : documented NodeStore ctor.

2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/ITreeNode.xml : documented
	* en/Gtk/TreeNodeAddedHandler.xml : documented
	* en/Gtk/TreeNodeRemovedHandler.xml : documented

2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/TreeNodeAttribute.xml : documented
	* en/Gtk/TreeNodeValueAttribute.xml : documented

2003-11-04  John Luke  <jluke@cfl.rr.com>

	* en/*/*.xml: run updater

2003-10-27  John Luke  <jluke@cfl.rr.com>

	* en/*/*.xml: run updater
	
2003-10-22  Hector E. Gomez Morales  <hgomez_36@flashmail.com>
	
	* en/Gtk/Drag.xml: fix some typos and errors.
	* en/Gtk/Window.xml: Almost done, some properties and events missing.
	* en/Gtk/WidgetFlags.xml: fix some errors.
	* en/Gtk/TODO: update missing list.

2003-10-14  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* en/AtkSharp.xml: Added
	* en/GLibSharp.xml: Added
	* en/GdaSharp.xml: Added
	* en/GdkSharp.xml: Added
	* en/GladeSharp.xml: Added
	* en/GnomeDbSharp.xml: Added
	* en/GnomeSharp.xml: Added
	* en/GtkSharp.xml: Added
	* en/PangoSharp.xml: Added
	* en/GConf/ChangeSet.xml: Documented finalize
	* en/GConf/NotifyEventHandler.xml: Fixed ecma-style compliance
	* en/GConf.PropertyEditors.xml: Added
	* Makefile: checks if any changes are made to en/*.xml

2003-10-13  John Luke  <jluke@cfl.rr.com>

	* en/*/*.xml: fix finalize signature (override not virtual)
	
2003-10-12  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/HTML.xml:  call begin before Editable = true, update links, normalize
	* makefile: add gtkhtml to update dirs
	* en/Gnome/PaperSelectorFlags.xml
	* en/Gnome/PrintButtons.xml
	* en/Gnome/PrintDialogFlags.xml
	* en/Gnome/PrintDialogRangeFlags.xml
	* en/GtkSharp/TextEventArgs.xml
	* en/GtkSharp/TextEventHandler.xml
	* en/GtkSharp/WidgetEventArgs.xml