@@ -1,8 +1,9 @@
 <Type Name="Quit" FullName="Gtk.Quit">
-  <TypeSignature Language="C#" Value="public class Quit" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class Quit" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey></AssemblyPublicKey>
+    <AssemblyPublicKey>
+    </AssemblyPublicKey>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <AssemblyCulture>neutral</AssemblyCulture>
     <Attributes />
@@ -10,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -28,9 +29,9 @@
         <Parameter Name="quit_handler_id" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Removes a quit handler by its identifier.</summary>
         <param name="quit_handler_id">a <see cref="T:System.UInt32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Add">
@@ -44,11 +45,11 @@
         <Parameter Name="function" Type="Gtk.Function" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Registers a function to be called when an instance of the mainloop is left.</summary>
         <param name="main_level">a <see cref="T:System.UInt32" /></param>
         <param name="function">a <see cref="T:Gtk.Function" /></param>
         <returns>a <see cref="T:System.UInt32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="AddFull">
@@ -65,14 +66,17 @@
         <Parameter Name="destroy" Type="Gtk.DestroyNotify" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Registers a function to be called when an instance of the mainloop is left.</summary>
         <param name="main_level">a <see cref="T:System.UInt32" /></param>
         <param name="function">a <see cref="T:Gtk.Function" /></param>
         <param name="marshal">a <see cref="T:Gtk.CallbackMarshal" /></param>
         <param name="data">a <see cref="T:System.IntPtr" /></param>
         <param name="destroy">a <see cref="T:Gtk.DestroyNotify" /></param>
         <returns>a <see cref="T:System.UInt32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>
+          <para>In comparison to <see cref="M:Gtk.Quit.Add()" /> this function adds the possibility to pass a marshaller and a function to be called when the quit handler is freed.</para>
+          <para>The former can be used to run interpreted code instead of a compiled function while the latter can be used to free the information stored in data.</para>
+		</remarks>
       </Docs>
     </Member>
     <Member MemberName="RemoveByData">
@@ -85,9 +89,9 @@
         <Parameter Name="data" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Removes a quit handler identified by its <paramref name="data" /> field.</summary>
         <param name="data">a <see cref="T:System.IntPtr" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="AddDestroy">
@@ -101,10 +105,10 @@
         <Parameter Name="objekt" Type="Gtk.Object" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Trigger destruction of <paramref name="objekt" /> in case the mainloop at level <paramref name="main_level" /> is quit.</summary>
         <param name="main_level">a <see cref="T:System.UInt32" /></param>
         <param name="objekt">a <see cref="T:Gtk.Object" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -113,9 +117,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Default Constructor</summary>
         <returns>a <see cref="T:Gtk.Quit" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
