@@ -1,6 +1,6 @@
 TODO doc for Gtk namespace.
 
-There are in total 324 xml to document in Gtk. Right now there are 176 xml not documented in any proportion.
+There are in total 324 xml to document in Gtk. Right now there are 173 xml not documented in any proportion.
 The idea is to have a easy way to know what documentation is missing, if you want to help or are helping please take out the xml that you commit
 from the missing list. For documentation that take some time to finish (like HTML, TextBuffer, etc) the best is that you but your name and email
 next to the file in this list to acknowledge that you are working in it (is recommendable that you suscribe to the mono-docs  mailing list).
@@ -90,7 +90,6 @@ Paint.xml
 PathPriorityType.xml
 PathType.xml
 PrintFunc.xml
-Quit.xml
 RBNode.xml
 RBNodeColor.xml
 RBTree.xml
@@ -156,7 +155,6 @@ ThemeEngine.xml
 ThreadNotify.xml
 ToolbarChildType.xml
 ToolbarSpaceStyle.xml
-TooltipsData.xml
 TranslateFunc.xml
 Tree.xml
 TreeCellDataFunc.xml
@@ -181,5 +179,4 @@ TreeViewMappingFunc.xml
 TreeViewSeachEqualFunc.xml
 Visibility.xml
 WidgetHelpType.xml
-WindowGroup.xml
 WindowKeysForeachFunc.xml
