@@ -1,16 +1,17 @@
 <Type Name="TooltipsData" FullName="Gtk.TooltipsData">
-  <TypeSignature Language="C#" Value="public sealed struct TooltipsData;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct TooltipsData;" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey></AssemblyPublicKey>
+    <AssemblyPublicKey>
+    </AssemblyPublicKey>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <AssemblyCulture>neutral</AssemblyCulture>
     <Attributes />
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The data needed for a <see cref="T:Gtk.Tooltips" /></summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -26,8 +27,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A <see cref="T:Gtk.TooltipsData" /> with default values.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="tip_text">
@@ -38,8 +39,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A string containing the tooltip message.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="tip_private">
@@ -50,8 +51,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A string that is not shown as the default tooltip.</summary>
+        <remarks>Instead, this message may be more informative and go towards forming a context-sensitive help system for your application. (FIXME: how to actually "switch on" private tips?)</remarks>
       </Docs>
     </Member>
     <Member MemberName="Get">
@@ -64,10 +65,10 @@
         <Parameter Name="widget" Type="Gtk.Widget" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="widget">To be added: an object of type 'Gtk.Widget'</param>
-        <returns>To be added: an object of type 'Gtk.TooltipsData'</returns>
-        <remarks>To be added</remarks>
+        <summary>Gets the <see cref="T:Gtk.TooltipsData" /> associated with <paramref name="widget" />.</summary>
+        <param name="widget">an object of type <see cref="T:Gtk.Widget" /></param>
+        <returns>an object of type <see cref="T:Gtk.TooltipsData" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="New">
@@ -80,10 +81,10 @@
         <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gtk.TooltipsData'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new TooltipsData object.</summary>
+        <param name="raw">an object of type <see cref="T:System.IntPtr" /></param>
+        <returns>an object of type <see cref="T:Gtk.TooltipsData" /></returns>
+        <remarks>This is not typically used directly by applications.</remarks>
       </Docs>
     </Member>
     <Member MemberName="widget">
@@ -92,12 +93,13 @@
       <ReturnValue>
         <ReturnType>Gtk.Widget</ReturnType>
       </ReturnValue>
-      <Parameters></Parameters>
+      <Parameters>
+      </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gtk.Widget'</param>
-        <returns>To be added: an object of type 'Gtk.Widget'</returns>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget" /> that this <see cref="T:Gtk.TooltipsData" /> is associated with.</summary>
+        <param name="value">an object of type <see cref="T:Gtk.Widget" /></param>
+        <returns>an object of type <see cref="T:Gtk.Widget" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="tooltips">
@@ -106,12 +108,13 @@
       <ReturnValue>
         <ReturnType>Gtk.Tooltips</ReturnType>
       </ReturnValue>
-      <Parameters></Parameters>
+      <Parameters>
+      </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gtk.Tooltips'</param>
-        <returns>To be added: an object of type 'Gtk.Tooltips'</returns>
-        <remarks>To be added</remarks>
+        <param name="value">an object of type <see cref="T:Gtk.Tooltips" /></param>
+        <returns>an object of type <see cref="T:Gtk.Tooltips" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
