@@ -1,3 +1,9 @@
+2003-11-12  John Luke  <jluke@cfl.rr.com>
+
+	* en/Gtk/Quit.xml: documented
+	* en/Gtk/TooltipsData.xml: documented
+	* en/Gtk/TODO: update
+	
 2003-11-05  Mike Kestner  <mkestner@ximian.com>
 
 	* en/Gtk/NodeStore.xml : documented
